# CuteGUI

./: .gitignore  CMakeLists.txt  README.md
docs/: diagram.json  template.cui  templates.md
src/: Makefile  glfw.c  glfwtest
src/cgm/: main  main.cpp  readme.md
src/cgm/include/: cgm.h  cgm.hpp  config.h  nettools.h
src/cgm/mics/example/: CMakeLists.txt
src/cgm/mics/example/app/: cute.toml
src/cgm/mics/example/app/dependencies/db/: db.h
src/cgm/mics/example/app/src/components/: navbar.cg
src/cgm/src/: cgm.cpp  nettools.cpp
src/cutegui_example/app/: cute.toml  index.cg
src/cutegui_example/app/dependencies/db/: db.cpp
src/cutegui_example/app/src/screens/: example.cg
src/cutegui_example/app/src/store/: index.cg
src/cutegui_example/src/routes/: index.cg
src/cutegui_example/src/screens/: example.cg
src/parser/: example.xml  main.cpp  pugiparser.cpp  pugiparser.h
src/parser/include/: parser.h
src/parser/src/: parser.cpp  pugixml.cpp
src/xmlparser/: parser  parser.cpp  parser.h  structureoffile.txt  xml.xml
